[gd_scene load_steps=32 format=2]

[ext_resource path="res://Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Boss.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/Boss/s_boss_idle.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/Boss/die/boss_die_1.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/Boss/die/boss_die_2.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/Boss/die/boss_die_3.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/Boss/die/boss_die_4.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/Boss/die/boss_die_5.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/Boss/walk/boss_walk_1.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/Boss/walk/boss_walk_2.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/Boss/walk/boss_walk_3.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/Boss/walk/boss_walk_4.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/Boss/walk/boss_walk_5.png" type="Texture" id=13]
[ext_resource path="res://assets/sprites/Boss/walk/boss_walk_6.png" type="Texture" id=14]
[ext_resource path="res://assets/sprites/Boss/attack/boss_attack_1.png" type="Texture" id=15]
[ext_resource path="res://assets/sprites/Boss/attack/boss_attack_2.png" type="Texture" id=16]
[ext_resource path="res://assets/sprites/Boss/attack/boss_attack_3.png" type="Texture" id=17]
[ext_resource path="res://assets/sprites/Boss/attack/boss_attack_4.png" type="Texture" id=18]
[ext_resource path="res://assets/sprites/Boss/attack/boss_attack_5.png" type="Texture" id=19]
[ext_resource path="res://assets/sprites/Boss/attack/boss_attack_6.png" type="Texture" id=20]
[ext_resource path="res://assets/sprites/Boss/attack/boss_attack_7.png" type="Texture" id=21]
[ext_resource path="res://assets/sprites/Boss/attack/boss_attack_8.png" type="Texture" id=22]
[ext_resource path="res://assets/sprites/Boss/attack/boss_attack_9.png" type="Texture" id=23]
[ext_resource path="res://assets/sprites/Boss/attack/boss_attack_10.png" type="Texture" id=24]
[ext_resource path="res://assets/sprites/Boss/attack/boss_attack_11.png" type="Texture" id=25]
[ext_resource path="res://assets/sprites/Boss/attack/boss_attack_12.png" type="Texture" id=26]
[ext_resource path="res://assets/sprites/Boss/attack/boss_attack_13.png" type="Texture" id=27]
[ext_resource path="res://assets/sprites/Boss/attack/boss_attack_14.png" type="Texture" id=28]
[ext_resource path="res://assets/sprites/Boss/attack/boss_attack_15.png" type="Texture" id=29]
[ext_resource path="res://MonochromeGray.theme" type="Theme" id=30]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": false,
"name": "die",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ) ],
"loop": true,
"name": "attack",
"speed": 10.0
} ]

[node name="Boss" index="0" groups=[
"enemies",
] instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="AnimatedSprite" parent="." index="0"]
frames = SubResource( 1 )
animation = "idle"
offset = Vector2( 2, 2 )

[node name="HealthBar" type="ProgressBar" parent="." index="3"]
visible = false
margin_left = -40.0
margin_top = -50.0
margin_right = 40.0
margin_bottom = -47.0
theme = ExtResource( 30 )
percent_visible = false

[node name="HealthBarTimer" type="Timer" parent="." index="4"]

[node name="StallTimer" type="Timer" parent="." index="5"]
wait_time = 0.5
one_shot = true
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="HealthBarTimer" to="." method="_on_HealthBarTimer_timeout"]
[connection signal="timeout" from="StallTimer" to="." method="_on_StallTimer_timeout"]
